--- a/public/css/hover.css
+++ b/public/css/hover.css
@@ -1264,7 +1264,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2098D1;
+  background: #EBC57C;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
