--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -5,6 +5,10 @@
 @import 'footer';
 @import 'icons';
 @import 'forms';
+@import 'producto';
+@import 'productos';
+@import 'carts';
+@import 'controlpanel';
 @import 'queries';
 
 * {
@@ -74,31 +78,7 @@
   text-decoration: line-through;
 }
 
-// Vista Productos
 
-.product {
-  border-bottom: 1px solid $ashBlue;
-    &:hover {
-      border-color: $blueSlate;
-    }
-}
-
-.product-desc {
-  text-overflow: ellipsis;
-}
-
-.inside {
-  position: relative;
-  cursor: pointer;
-}
-
-.icons-product {
-  position: absolute;
-  top: -10px;
-  right: 5px;
-  display: flex;
-  justify-content: flex-end;
-}
 
 // para centrar e igualar with de todos los iconos
 .ico {
@@ -109,64 +89,6 @@
   align-items: center;
 }
 
-.onSale-label {
-  color: white;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 96%;
-  height: 95%;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.sale {
-  background-color: $dandelion;
-  padding: 0 7px;
-  border-radius: 11px;
-}
-
-.uk-iconnav > * > a.rounded-icon {
-  display: block;
-  color: #212529;
-  background-color: #ffffffb8;
-  padding: 7px;
-  border-radius: 20px;
-}
-
-// Vista producto
-
-.uk-slideshow [class*=uk-position-bottom] {
-  position: relative!important;
-}
-
-section.producto {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-section.informacion {
-  max-width: 600px;
-  margin: 0px 20px;
-}
-
-section.imagenes-producto {
-  max-height: 450px;
-  max-width: 500px;
-  width: 100%;
-  object-fit: cover;
-  border-bottom: 1px #8080804f solid;
-}
-
-.tag {
-  color: black;
-  font-size: 10px;
-  border: 1px solid $dandelion;
-  padding: 2px 8px;
-  margin: 2px;
-  border-radius: 10px;
-}
 
 // Input Number customizado
 
@@ -262,26 +184,10 @@ select.talle {
   border: 1px solid #ced4da;
 }
 
-// Cart
 
-div.producto {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-align: -webkit-center;
-  padding: 20px 0px;
-  border-top: 1px solid #e5e5e5;
-}
 
-img.cart-img {
-  display: flex;
-  align-items: center;
-  width: 200px;
-}
 
-svg[data-svg=trash] {
-  margin-bottom: 3px;
-}
+
 
 /* Para modificar los valores de la barra de scroll lateral https://codepen.io/zakkain/pen/phjBC */
 
