--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -28,6 +28,21 @@
   text-decoration: none;
 }
 
+// Notificaciones
+.sticky-notification {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 1000;
+  background-color: $ashBlue;
+  color: white;
+  border: none;
+}
+
+.notification-error {
+  background-color: red;
+}
+
 .link {
   &:hover, &:active, &:focus {
     color: $ashBlue;
