cambios visuales e input model en edit y add product

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -198,9 +198,9 @@ nav {
 }
 
 .nav-categories {
-  border-top: 0.5px solid #6B799E;
   padding-top: 10px;
   padding-bottom: 10px;
+  background-color: #6B799E;
 }
 
 span.gizza {
@@ -220,7 +220,7 @@ span.joyas {
 }
 
 li a.navlink, button.navlink {
-  color: #6B799E;
+  color: white;
   letter-spacing: 1px;
   font-size: 15px;
   font-weight: 500;
@@ -239,6 +239,22 @@ button.navlink {
   border: none;
   margin-top: 0;
   margin-bottom: 0.5px;
+}
+
+.items-in-cart {
+  position: relative;
+  width: 14px;
+  height: 14px;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  top: 9px;
+  left: 35px;
+  background-color: #EBC57C;
+  font-size: 7px;
+  border-radius: 10px;
+  color: white;
+  z-index: 1000;
 }
 
 /* La animacion de cambio */
