--- a/public/sass/_queries.scss
+++ b/public/sass/_queries.scss
@@ -12,7 +12,7 @@
 
 @media (min-width: 530px) {
 
-// Se muestran scuando en resoluciones iguales o mayores a 530
+// Se muestran cuando en resoluciones iguales o mayores a 530
   .visibleSoloXS {
     display: none;
   }
