--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -757,7 +757,6 @@ section.imagenes-producto {
 }
 
 .onSale-label {
-  color: white;
   position: absolute;
   top: 10px;
   left: 10px;
@@ -774,18 +773,19 @@ img.producto {
 }
 
 .sale {
+  color: white;
   background-color: #EBC57C;
   padding: 0 7px;
   border-radius: 11px;
 }
 
 .new-label {
-  color: white;
   display: flex;
   justify-content: center;
 }
 
 .new {
+  color: white;
   background-color: #6B799E;
   padding: 0 7px;
   border-radius: 11px;
@@ -821,7 +821,6 @@ div.producto {
   text-align: -webkit-center;
   padding: 20px 0px;
   border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
 }
 
 img.cart-img {
@@ -832,22 +831,11 @@ img.cart-img {
 
 svg[data-svg=trash] {
   margin-bottom: 3px;
+  color: #9C8F96;
 }
 
-.new-label-cart {
-  position: absolute;
-  top: 2px;
-  right: 65px;
-  color: white;
-  display: flex;
-  justify-content: center;
-}
-
-.onSale-label-cart {
-  color: white;
-  position: absolute;
-  top: 2px;
-  left: 65px;
+span.sale, span.new {
+  font-size: 10px;
 }
 
 .controles {
@@ -870,6 +858,61 @@ a.control {
 
 a.control:hover {
   background: #404b46;
+}
+
+section#carrito {
+  height: 1000px;
+  border-left: 1px solid #e5e5e5;
+}
+
+#carrito div.producto {
+  justify-content: space-between;
+}
+
+#carrito div.producto div {
+  display: contents;
+}
+
+#carrito article {
+  display: block;
+}
+
+img.checkout-cart-img {
+  display: flex;
+  align-items: center;
+  width: 100px;
+}
+
+.calculos {
+  border-top: 1px solid #e5e5e5;
+}
+
+section#formulario {
+  height: 1000px;
+}
+
+.form-control-checkout {
+  border: 1px solid #6B799E;
+  border-radius: 0;
+  display: block;
+  width: 100%;
+  height: 30px;
+  padding: 0;
+}
+
+.custom-select {
+  border: 1px solid #6B799E;
+  height: 30px;
+}
+
+.whatsapp-payment-button {
+  border: 1px solid #9C8F96;
+  border-radius: 13px;
+}
+
+.mercadopago-payment-button {
+  border: 1px solid #9C8F96;
+  border-radius: 13px;
 }
 
 @media (max-width: 530px) {
