--- a/public/css/uikit.css
+++ b/public/css/uikit.css
@@ -357,7 +357,7 @@ hr,
 /* Add margin if adjacent element */
 * + hr,
 * + .uk-hr {
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 /* Address
  ========================================================================== */
@@ -669,11 +669,11 @@ a.uk-link-reset,
   /* 1 */
   border: none;
   /* 2 */
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 /* Add margin if adjacent element */
 * + [class*='uk-divider'] {
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 /* Icon
  ========================================================================== */
