--- a/public/sass/_carts.scss
+++ b/public/sass/_carts.scss
@@ -7,7 +7,6 @@ div.producto {
   text-align: -webkit-center;
   padding: 20px 0px;
   border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
 }
 
 img.cart-img {
@@ -18,20 +17,9 @@ img.cart-img {
 
 svg[data-svg=trash] {
   margin-bottom: 3px;
+  color: $doveGrey;
 }
 
-.new-label-cart {
-  position: absolute;
-  top: 2px;
-  right: 65px;
-  color: white;
-  display: flex;
-  justify-content: center;
-}
-
-.onSale-label-cart {
-  color: white;
-  position: absolute;
-  top: 2px;
-  left: 65px;
+span.sale, span.new {
+  font-size: 10px;
 }
