--- a/public/sass/_checkout.scss
+++ b/public/sass/_checkout.scss
@@ -1,5 +1,5 @@
 section#carrito {
-  height: 1000px;
+  // height: 1000px;
   border-left: 1px solid #e5e5e5;
 }
 
@@ -26,7 +26,7 @@ img.checkout-cart-img {
 }
 
 section#formulario {
-  height: 1000px;
+  // height: 1000px;
 }
 
 .form-control-checkout {
