--- a/public/sass/_carts.scss
+++ b/public/sass/_carts.scss
@@ -15,10 +15,10 @@ img.cart-img {
   width: 200px;
 }
 
-svg[data-svg=trash] {
-  margin-bottom: 3px;
-  color: $doveGrey;
-}
+// svg[data-svg=trash] {
+//   margin-bottom: 3px;
+//   color: $doveGrey;
+// }
 
 span.sale, span.new {
   font-size: 10px;
