--- a/public/sass/_carts.scss
+++ b/public/sass/_carts.scss
@@ -12,7 +12,9 @@ div.producto {
 img.cart-img {
   display: flex;
   align-items: center;
-  width: 200px;
+  // width: 200px;
+  height: 150px;
+  object-fit: contain;
 }
 
 // svg[data-svg=trash] {
