--- a/public/sass/_checkout.scss
+++ b/public/sass/_checkout.scss
@@ -30,12 +30,14 @@ section#formulario {
 }
 
 .form-control-checkout {
+  text-align: center;
+  text-align-last: center;
   border: 1px solid #6B799E;
   border-radius: 0;
   display: block;
   width: 100%;
   height: 30px;
-  padding: 0;
+  // padding: 0;
 }
 
 .custom-select {
