--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -256,6 +256,22 @@ button.navlink {
   z-index: 1000;
 }
 
+button.navlink-mobile {
+  background-color: #141414;
+  color: white;
+  outline: none !important;
+  border: none;
+  margin-top: 0;
+  margin-bottom: 0.5px;
+  display: inline !important;
+  font-size: 16px;
+  padding: 2px 0px !important;
+}
+
+#navbarMobile {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
 /* La animacion de cambio */
 .cbp-af-header {
   transition: all 0.4s;
