--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -852,16 +852,20 @@ img.cart-img {
   object-fit: contain;
 }
 
+img.edit-img {
+  display: flex;
+  align-items: center;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
 span.sale, span.new {
   font-size: 10px;
 }
 
 .controles {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 500px;
+  max-width: 700px;
   padding: 20px;
   margin: 0 auto;
 }
