--- a/public/sass/_carts.scss
+++ b/public/sass/_carts.scss
@@ -12,7 +12,7 @@ div.producto {
 img.cart-img {
   display: flex;
   align-items: center;
-  // width: 200px;
+  width: 150px;
   height: 150px;
   object-fit: contain;
 }
