--- a/public/sass/styles.scss
+++ b/public/sass/styles.scss
@@ -77,12 +77,20 @@
   color:white;
 }
 
-.brightness {
+.NoBrightness {
   filter: brightness(50%);
 }
 
-.brightness:hover {
+.NoBrightness:hover {
   filter: brightness(100%);
+}
+
+.brightness {
+  filter: brightness(100%);
+}
+
+.brightness:hover {
+  filter: brightness(50%);
 }
 
 .ncursor {
