--- a/public/sass/_carts.scss
+++ b/public/sass/_carts.scss
@@ -14,7 +14,7 @@ img.cart-img {
   align-items: center;
   width: 150px;
   height: 150px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 // svg[data-svg=trash] {
