--- a/public/sass/_checkout.scss
+++ b/public/sass/_checkout.scss
@@ -20,7 +20,7 @@ img.checkout-cart-img {
   align-items: center;
   width: 100px;
   height: 100px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .calculos {
