--- a/public/sass/_productos.scss
+++ b/public/sass/_productos.scss
@@ -37,8 +37,8 @@
 
 img.producto {
   height: 230px;
-  width: 100%!important;
-  object-fit: contain;
+  width: 300px!important;
+  object-fit: cover;
 }
 
 .sale {
